java/java-tests/testData/inspection/dataFlow/fixture/SwitchLabelNull.java
import org.jetbrains.annotations.*;

class Test {
  void test(int x) {
    Integer y = null;
    switch (x) {
      case <error descr="Constant expression required">y</error>:
    }
  }
}